--- a/dating-app-project/src/main/resources/templates/login.html
+++ b/dating-app-project/src/main/resources/templates/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="zh-CN" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>登录 - 缘分天空</title>
@@ -40,4 +40,4 @@
     </div>
 </div>
 </body>
-</html> 
+</html>
