--- a/dating-app-project/src/main/resources/templates/weddingcompany.html
+++ b/dating-app-project/src/main/resources/templates/weddingcompany.html
@@ -16,7 +16,7 @@
                 <ul class="main-nav">
                     <li><a href="/">缘分天空</a></li>
                     <li><a href="match">缘分匹配</a></li>
-                    <li><a href="interaction">消息互动</a></li>
+                    <!-- <li><a href="interaction">消息互动</a></li> -->
                     <li><a href="wedding-cases">婚礼案例</a></li>
                     <li><a href="wedding-companies" class="active">婚庆公司</a></li>
                 </ul>
